# obs-rs

./: .gitmodules  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: build.yml
obs-rs-sys/: Cargo.toml  README.md  build.rs
obs-sys/: Cargo.toml  build.rs
plugins/avatar-plugin/: Cargo.toml
plugins/avatar-plugin/examples/: avatar_render_keyboard.rs  avatar_render_standard.rs
plugins/avatar-plugin/src/: input_capture.rs  lib.rs  loader.rs
scripts/: main.py  pyproject.toml
src/: data.rs  hotkey.rs  lib.rs  log.rs  module.rs  native_enum.rs  properties.rs  result.rs  string.rs  wrapper.rs
src/encoder/: context.rs  ffi.rs  mod.rs  traits.rs
src/frontend/: mod.rs
src/graphics/: display.rs  mod.rs
src/media/: audio.rs  mod.rs  state.rs  video.rs
src/output/: context.rs  ffi.rs  mod.rs  traits.rs
src/service/: context.rs  ffi.rs
src/source/: context.rs  ffi.rs  mod.rs  push.rs  scene.rs  traits.rs
