[package]
name = "obs-wrapper"
version = "0.5.0-tm"
authors = [
    "Bennett Hardwick <me@bennetthardwick.com>",
    "Christopher Tam <ohgodtamit@gmail.com",
]
edition = "2024"
license = "GPL-2.0"
description = "Safe wrapper of obs-sys"
repository = "https://github.com/TakiMoysha/rust-obs-plugins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["obs-sys", "plugins/*"]

[features]
default = ["obs-32"]
obs-30 = ["obs-sys/obs-30"]
obs-31 = ["obs-sys/obs-31"]
obs-32 = ["obs-sys/obs-32"]

[dependencies]
obs-sys = { path = "./obs-sys", version = "0.4.0-tm", default-features = false }
paste = "1.0.15"
log = { version = "0.4.28", features = ["std"] }
num-traits = "0.2.19"
thiserror = "2.0.17"
