[package]
name = "avatar-plugin"
version = "0.2.0"
edition = "2024"

[dependencies]
obs-wrapper = { path = "../..", default-features = false }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
nalgebra = "0.34"                                  # math and physics
lerp = "0.5"                                       # interpolation

# Wayland input capture dependencies (optional, enabled by 'wayland' feature)
evdev = { version = "0.13", optional = true }
libc = "0.2"

# Platform-specific dependencies for input capture (placeholders).
#
# When the Windows / X11 paths get implemented, declare the deps here:
#   [target.'cfg(target_os = "windows")'.dependencies]
#   windows = { version = "0.58", features = [...] }
#
#   [target.'cfg(target_os = "linux")'.dependencies]
#   x11 = { version = "2.21", optional = true, features = [...] }
#
# Note: Cargo doesn't allow `feature = ...` inside `target.cfg(...)`, so
# x11 has to be optional + listed unconditionally, and the `x11` Cargo
# feature toggles it via `x11 = ["dep:x11"]`.

[dev-dependencies]
ctrlc = "3.4"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
# examples
macroquad = "0.4"

[features]
default = ["wayland", "obs-32"]

# Input capture features - only one should be enabled at a time on Linux
x11 = []            # Linux X11 input capture
wayland = ["evdev"] # Linux Wayland input capture (requires evdev)

# Pass-through OBS major-version selectors. Must match the version selected
# on obs-wrapper for the workspace build to resolve cleanly.
obs-30 = ["obs-wrapper/obs-30"]
obs-31 = ["obs-wrapper/obs-31"]
obs-32 = ["obs-wrapper/obs-32"]

[lib]
name = "avatarplugin"
crate-type = ["cdylib", "rlib"]
